feat: recalculate metadata json file; auto create new blog;

--- a/0.md
+++ b/0.md
@@ -113,7 +113,7 @@ Here is a simple footnote[^1]. With some additional text after it[^@#$%] and wit
 ## highlight
 
 ```javascript
-const highlight = 'code'
+const highlight = "code";
 ```
 
 ```html title="Code title"
