blog: update blog 1

--- a/blogs/1.md
+++ b/blogs/1.md
@@ -5,6 +5,9 @@
 
 ## Known
 
+> [测试用仓库](https://github.com/sussybot5258/packageExportsTest.git)
+> 进入`app/website`文件夹下后进行`bun run build`即可
+
 1. 同步引用`import xx from 'xxx'`会合并, 异步引用`() => import('xxx')`会分包
 2. 同步引用不管深度多深都可以平铺出来，当作在根文件中执行了引用  
    异步引用则直接与当前同步进行分割，可以被视为一个分支的概念，一定会被拆开成为另一个文件  
@@ -30,3 +33,124 @@
 ## Doubt
 
 1. 关于分包，不知道`vite`是否存在`chunk`大小上限限制或其他的同步引用分包策略，理论上来说所有同步引用都会被打成一个`chunk`?
+
+## Vite打包和package.json
+
+> [!NOTE]
+> 如果该包作为组件使用而不是网页则推荐使用`build.lib`模式配置并打包  
+> 当然也可以自己写`rollup`配置文件, 但两种方式都需要自己写点脚本代码
+
+项目`src`下的结构:
+```
+.
+├── assets
+│   └── vue.svg
+├── components
+│   └── i18n
+│       ├── index.ts
+│       └── lang
+│           ├── en.ts
+│           └── zh.ts
+├── index.ts
+└── vite-env.d.ts
+```
+
+这里在entry中配置了所有语言文件及其他入口，并且在fileName中通过`matchLocaleLang`来匹配语言文件的名字并加上路径  
+
+```typescript
+function getLocaleMap() {
+  const cwd = "./src/components/i18n/lang/";
+  const resList = Array.from(
+    new Bun.Glob("*.ts").scanSync({
+      cwd,
+    }),
+  ).map((v) => path.join(cwd, v));
+
+  const resMap: Record<string, string> = {};
+  const tsPattern = /(.*)\.ts$/i;
+  resList.forEach((v) => {
+    console.log(v);
+    const name = "locale_" + path.basename(v).replace(tsPattern, "$1");
+    resMap[name] = v;
+  });
+
+  console.log(resMap);
+  return resMap;
+}
+
+function matchLocaleLang(name: string) {
+  const localePathBase = "i18n/";
+  const localeLangPath = "lang/";
+
+  // local lang
+  const localPattern = /^locale_(.*)/i;
+  const res = localPattern.exec(name);
+  if (res && res[1]) return path.join(localePathBase, localeLangPath, res[1]);
+
+  // locale
+  if (name === "locale") return path.join(localePathBase, name);
+
+  // other
+  return name;
+}
+
+export default defineConfig(() => {
+  return {
+    build: {
+      lib: {
+        entry: {
+          index: "src/index.ts",
+          locale: "src/components/i18n/index.ts",
+          ...getLocaleMap(),
+        },
+        fileName(format, entryName) {
+          entryName = matchLocaleLang(entryName);
+          console.log(entryName);
+          return `${entryName}.${format}.js`;
+        },
+        formats: ["es"],
+      },
+    },
+  };
+});
+```
+
+打包后得到:
+
+```
+.
+├── components
+│   └── i18n
+│       ├── index.d.ts
+│       └── lang
+│           ├── en.d.ts
+│           └── zh.d.ts
+├── i18n
+│   ├── lang
+│   │   ├── en.es.js
+│   │   └── zh.es.js
+│   └── locale.es.js
+├── index.d.ts
+├── index.es.js
+└── vite.svg
+```
+
+tsc输出的d.ts与js路径不同没事，可以通过`package.json`中的`exports`配置来实现:
+```json
+{
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./i18n/lang/*": {
+      "types": "./dist/components/i18n/lang/*.d.ts",
+      "import": "./dist/i18n/lang/*.es.js"
+    },
+  },
+}
+```
+
+这里我指明了入口和`i18n/lang/*`, `types`和`import`分别指定d.ts和js的路径, 但需要注意的是`*`只能匹配一次, 不能实现类似`**/*.xxx`的匹配  
+这样就实现了分开导出且保留`named export`
