blog: update arch pacman

--- a/blogs/6.md
+++ b/blogs/6.md
@@ -1,9 +1,13 @@
 # Arch pacman delete related packages
 
-Run:
+## Remove `pkg` and every package depend on `pkg`
 
 ```bash
-pacman -R <name> && pacman -Rns <name>
+pacman -R <pkg> && pacman -Rnc <pkg>
 ```
 
-This operation will remove `name` and every package that depend on `name`
+## Remove `pkg` and it's dependencies
+
+```bash
+pacman -R <pkg> && pacman -Rns <pkg>
+```
