blog: update arch pacman

--- a/blogs/6.md
+++ b/blogs/6.md
@@ -11,3 +11,9 @@ pacman -R <pkg> && pacman -Rnc <pkg>
 ```bash
 pacman -R <pkg> && pacman -Rns <pkg>
 ```
+
+## Get orphaned packages
+
+```bash
+pacman -Qdt <-q> # -q will not show the package info(version etc)
+```
