blog: update rust tips

--- a/blogs/7.md
+++ b/blogs/7.md
@@ -1,6 +1,6 @@
-# Rust tips
+#  Rust tips
 
-## `Fn` `FnMut` and `FnOnce` relations with `closure`
+## `Fn` `FnMut` and `FnOnce` under `closure`
 
 - `Fn` is the most _flexible_ one, it can be called multiple times without any restrictions since they don't have any changes to their environment.
 
