blog: update rust tips

--- a/blogs/7.md
+++ b/blogs/7.md
@@ -75,5 +75,75 @@
   }
   ```
 
+## impl Trait for Trait
+
+> [!WARNING]
+> `#[derive]` won't work
+
+```rust
+trait Test1 {}
+trait Test2 {
+    fn t(&self) {}
+}
+impl Test2 for dyn Test1 {
+    fn t(&self) {
+        // ...
+    }
+}
+```
+
+## Return a closure that uses self
+
+This is usually a good idea to directly use `self` in side a closure that that lives longer than current function.  
+Unless it implements `Copy` or `Clone`, you can `self.clone()` from outside and _move_ that cloned variable inside closure.
+But this is only for `FnOnce` since that cloned variable will be dropped after closure returned.
+
+If you wish to run it multiple times, then you have to specify the lifetime, for example:
+
+```rust
+// WILL NOT COMPILE
+struct S {
+    d: usize,
+}
+impl S {
+    fn caller_(&mut self) -> Box<dyn FnMut()> {
+        Box::new(|| self.d += 1)           // here, it will raise:
+                                           // lifetime may not live long enough returning this value requires that `'1` must outlive `'static`
+    }
+}
+```
+
+But not only errors are shown, it gives us help: _to declare that the trait object captures data from argument `self`, you can add an explicit `'_`lifetime bound:` + '_`_  
+As for why is this needed here, maybe this means that it wants you to make sure that closure is actually try to borrow `self`? idk for now.
+
+But whatever, this works:
+
+```rust
+fn caller_(&mut self) -> Box<dyn FnMut() + '_> {
+    Box::new(|| self.d += 1)
+}
+```
+
+As to what [The Rust Reference/Lifetime elision]() said: _If the receiver has type `&Self` or `&mut Self`, then the lifetime of that reference to Self is assigned to all elided output lifetime parameters._  
+And so what we do up there ca be translated to:
+
+```rust
+fn caller<'a>(&'a mut self) -> Box<dyn FnMut() + 'a> {
+    Box::new(|| self.d += 1)
+}
+```
+
+## Pass in a closure which uses variable from outer scope
+
+If you're using `FnOnce` then just add `move` in front.
+
+But if the closure will be called multiple times, implementing `Fn / FnMut / FnOnce` for your own `struct` could work, but this feature in only available under `nightly` currently(see [#29625](`https://github.com/rust-lang/rust/issues/29625`])).
+
+Or you can specify a trait and add `fn call(&self)`/`fn call_mut(&mut self)` yourself and combine with the struct that holds all of the variable inside that scope, pass in the struct and call `call/call_mut`.
+
+## WTF?! Why `borrow` and `borrow_mut` not working?
+
+Simply removes `use std::borrow::{Borrow, BorrowMut}` from your code.
+
 > [!NOTE]
 > updating...
