blog: update rust tips

--- a/blogs/7.md
+++ b/blogs/7.md
@@ -77,8 +77,7 @@
 
 ## impl Trait for Trait
 
-> [!WARNING]
-> `#[derive]` won't work
+> [!WARNING] > `#[derive]` won't work
 
 ```rust
 trait Test1 {}
@@ -144,6 +143,57 @@ Or you can specify a trait and add `fn call(&self)`/`fn call_mut(&mut self)` you
 ## WTF?! Why `borrow` and `borrow_mut` not working?
 
 Simply removes `use std::borrow::{Borrow, BorrowMut}` from your code.
+
+## cannot assign to `self.x` because it is borrowed
+
+Always stay alert dealing with references.
+
+```rust
+impl SomeStruct {
+    fn a(&self) -> Result<u32, &str> {
+        self.p1.ok_or("no p1")
+    }
+    fn operate(&mut self) -> Result<(), &str> {
+        let p1 = self.a()?; // IDE gives lint: first borrow here
+        self.p2 = p1; // error here: cannot assign to `self.p2` because it is borrowed
+        Ok(())
+    }
+}
+```
+
+But function `a` is done and `&self` borrow should be dropped, why it doesn't?  
+This is because the lifetime compiler inferred is incorrect:
+
+```rust
+fn a<'a>(&'a self) -> Result<(), &'a str> {
+  self.p1.ok_or("no p1")
+}
+```
+
+The borrow of `self` is the same lifetime of returned `"no p1"`, so `&self` isn't dropped at the end of function `a`, instead, it goes along wherever `&str` returned goes.
+
+To fix it, you have to separate lifetime between borrow of self and ref str:
+
+```rust
+impl<'b> SomeStruct {
+    fn a(&self) -> Result<u32, &'b str> {
+        self.p1.ok_or("no p1")
+    }
+    fn operate(&mut self) -> Result<(), &'b str> {
+        let p1 = self.a()?;
+        self.p2 = p1;
+        Ok(())
+    }
+}
+```
+
+Or in this particular case, use `'static` since `"str"` itself is `'static` anyway
+
+```rust
+fn a(&self) -> Result<(), &'static str> {
+  self.p1.ok_or("no p1")
+}
+```
 
 > [!NOTE]
 > updating...
