blog: update rust tips

--- a/blogs/7.md
+++ b/blogs/7.md
@@ -195,5 +195,13 @@ fn a(&self) -> Result<(), &'static str> {
 }
 ```
 
+## Why does impl require lifetime annotations
+
+https://www.reddit.com/r/learnrust/comments/ln28un/why_does_impl_require_lifetime_annotations/
+
+## std::mem::take temporary remove
+
+https://users.rust-lang.org/t/need-help-with-mutable-and-immutable-borrow-of-self/68811/2?u=ogios
+
 > [!NOTE]
 > updating...
