blog: update rust tips; add gtk gui app builder

--- a/blogs/7.md
+++ b/blogs/7.md
@@ -203,5 +203,9 @@ https://www.reddit.com/r/learnrust/comments/ln28un/why_does_impl_require_lifetim
 
 https://users.rust-lang.org/t/need-help-with-mutable-and-immutable-borrow-of-self/68811/2?u=ogios
 
+## why only one mutable borrow
+
+https://manishearth.github.io/blog/2015/05/17/the-problem-with-shared-mutability/
+
 > [!NOTE]
 > updating...
