--- a/blogs/10.md
+++ b/blogs/10.md
@@ -1,4 +1,10 @@
-# Build gtk apps with gtk apps
+# GTK tips
+
+## Build gtk apps with gtk apps
 
 - [gnome-builder](https://gitlab.gnome.org/GNOME/gnome-builder)
 - [Cambalache](https://gitlab.gnome.org/jpu/cambalache)
+
+## gtk4 background transparency
+
+https://discourse.gnome.org/t/using-gtk4-in-c-how-do-i-make-the-window-background-color-transparent/20622/4
