--- a/blogs/7.md
+++ b/blogs/7.md
@@ -207,5 +207,9 @@ https://users.rust-lang.org/t/need-help-with-mutable-and-immutable-borrow-of-sel
 
 https://manishearth.github.io/blog/2015/05/17/the-problem-with-shared-mutability/
 
+## suffer from loop with cpu hungry but still want to get the result in time?
+
+https://github.com/rust-lang/rust/issues/46774
+
 > [!NOTE]
 > updating...
